--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,17 @@ dependencies:
   google_fonts: ^6.1.0
   http: 1.1.2
   get: ^4.6.6
+  sqflite: ^2.3.0
+  flutter_local_notifications: ^16.3.0
+  rxdart: ^0.27.7
+  path_provider: ^2.1.2
+  intl: ^0.19.0
+  android_alarm_manager_plus: ^3.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
